[package]
name = "mouse_mover"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mouse-rs = "0.4.2"
tokio = { version = "1.36.0", features = ["full"] }
egui-macroquad = "0.15.0"
macroquad = "0.3.25"
denlibs = "0.1.9"
mouse_position = "0.1.3"
