[package]
name = "mouse_mover"
version = "0.2.0"
edition = "2021"
authors = ["Denis Salmanovich"]
readme = "README.md"
description = "A simple utility that can be used to simulate user activity."
repository = "https://github.com/denix666/mouse_mover"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.22.0"
mouse-rs = "0.4.2"
denlibs = "0.1.9"
mouse_position = "0.1.3"